Finalização da Refatoração
